// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge with basic theme applied Badge renders correctly 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    onPress={undefined}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        Object {
          "backgroundColor": "red",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Badge with basic theme applied OldBadge renders correctly 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    onPress={undefined}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Badge with no theme applied Badge renders correctly 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    onPress={undefined}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Badge with no theme applied OldBadge and Badge returns the same thing if no theme is applied 1`] = `"[2mCompared values have no visual difference.[22m"`;

exports[`Badge with no theme applied OldBadge renders correctly 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    onPress={undefined}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
